# automake

./: Makefile  Makefile.in  autogen.sh  config.h  config.status  configure  configure.ac
autom4te.cache/: output.1  requests  traces.0  traces.1
include/: test.h
lib/: Makefile  Makefile.am  Makefile.in  test.c
lib/.deps/: test.Po
src/: Makefile  Makefile.am  Makefile.in  main.c
src/.deps/: main.Po
